fix profile layout on smaller screens

--- a/sass/pages/_profile.scss
+++ b/sass/pages/_profile.scss
@@ -6,40 +6,43 @@
 
 .banneritems {
     height: 100%;
+    width: 90%;
+    max-width: 700px;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    max-height: 100%;
+    color: white;
 
-    .hero-text {
-        text-align: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        max-height: 100%;
-        transform: translate(-50%, -50%);
+    h1 {
         color: white;
+        margin: 10px;
+    }
 
-        h1 {
-            color: white;
-            margin: 10px;
-        }
+    p {
+        color: white;
+    }
 
-        p {
-            color: white;
-        }
+    .avatar {
+        max-width: 200px;
+        width: 100%;
+    }
 
-        .avatar {
-            max-width: 200px;
-            width: 100%;
-        }
-
-        h1 {
-            margin-bottom: 0;
-        }
-
+    h1 {
+        margin-bottom: 0;
+    }
+    .bio{
+        padding-top:20px;
     }
 }
 
 .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://i.imgur.com/svmBcCG.png");
-    height: 50%;
+    height: 60%;
+    max-height: 100%;
+    min-height: 575px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -49,10 +52,6 @@
 .editprofile {
     color: white;
     display: inline-block;
-}
-
-.bio {
-    padding: 5%;
 }
 
 #rank-list,
